Fixed loan PUT endpoint to accurately extend the due date by an exact number of weeks.  Also added the rest of media endpoints and review endpoints.
